fix background for dark mode

--- a/public/styles/create.css
+++ b/public/styles/create.css
@@ -1,3 +1,8 @@
+html,
+body {
+    height: 100%;
+}
+
 .form-rows {
     margin-right: 2rem;
 }
